Fix subscription, add shorter texts and dependent option

--- a/config/locales.yml
+++ b/config/locales.yml
@@ -4,13 +4,10 @@ ru:
     - Работаем
     - Введите / чтобы увидеть все команды
   scan: 
-    - Зачем будить?
-    - Вы думаете это все на облаке крутиться?!
-    - Вообще-то, в вашем канале сидит маленький китаец и бросает кости. Постыдитесь.
+    - Зачем будить? Вообще-то, в вашем канале сидит маленький китаец и бросает кости. Постыдитесь.
     - Ты пидор, %{param}!
   scan_already_done:
-    - Китаец просыпается...
-    - Сверяет данные...
+    - Китаец просыпается... Сверяет данные...
     - Сегодня уже проводился розыгрыш, спешить некуда! %{param} все еще пидорасина. Китаец продолжает спать.
   time_left: Осталось %{hours} часов и %{minutes} минут
   nobody_to_scan: Никто не зарегестрировался, так что пидорасы все!
@@ -30,9 +27,7 @@ ru:
     - Сука, угадал
     - Твои очки анулированы, гений.
   reminder:
-    - Внимание!
-    - Меня просили автоматически не сканировать на пидора в этой группе...
-    - По-этому я просто напоминаю, что уже есть такая возможность!
+    - Внимание! Напоминаю, что уже есть возможность сканировать!
   confirm_subscription:
     - Супер, еще работа
     - Нет чтобы самим следить за временем. Ленивые засранцы
